minor alignment and image loading bug fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ p {
 }
 
 li {
-    max-width: 48em;
+    max-width: 53em;
     font-size: 18px;
     line-height: 1.3em;
 }
@@ -72,6 +72,7 @@ a:hover {
     white-space: nowrap;
     
 }
+
 
 .fa {
   padding: 30px 20px;
